--- a/header.html
+++ b/header.html
@@ -3,7 +3,7 @@
     <head>
         <meta http-equiv='Content-Type' content='text/html; charset=utf-8'>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Bao Thanh Thien</title>
+        <title>Cuộc Đời Lớn</title>
         <link href='/css/bootstrap.min.css' rel='stylesheet'>
         <link href='/css/bootstrap-responsive.min.css' rel='stylesheet'>
         <style>
@@ -17,6 +17,6 @@ h3 {
     </head>
     <body>
         <div class='container-fluid'>
-            <h1>Bao Thanh Thien</h1>
+            <h1>Cuộc Đời Lớn</h1>
             <div class='row-fluid'>
                 <ul class='thumbnails'>
