--- a/header.html
+++ b/header.html
@@ -3,12 +3,12 @@
     <head>
         <meta http-equiv='Content-Type' content='text/html; charset=utf-8'>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Cuộc Đời Lớn</title>
+        <title>Phim Lẻ</title>
         <link href='/css/bootstrap.min.css' rel='stylesheet'>
         <link href='/css/bootstrap-responsive.min.css' rel='stylesheet'>
         <style>
 h3 {
-    font-size: 16px;
+    font-size: 14px;
 }
 .thumbnails .span4:nth-child(3n+1) {
     margin-left: 0;
@@ -17,6 +17,6 @@ h3 {
     </head>
     <body>
         <div class='container-fluid'>
-            <h1>Cuộc Đời Lớn</h1>
+            <h1>Phim Lẻ</h1>
             <div class='row-fluid'>
                 <ul class='thumbnails'>
