--- a/header.html
+++ b/header.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta http-equiv='Content-Type' content='text/html; charset=utf-8'>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name='viewport' content='width=device-width, initial-scale=1.0'>
         <title>Phim Lẻ</title>
         <link href='/css/bootstrap.min.css' rel='stylesheet'>
         <link href='/css/bootstrap-responsive.min.css' rel='stylesheet'>
