--- a/footer.html
+++ b/footer.html
@@ -1,7 +1,7 @@
                 </ul>
             </div> <!-- end row -->
         </div> <!-- end container -->
-        <script src='/js/bootstrap.min.js'></script>
-        <script src='/js/holder.js'></script>
+        <script src='/js/jquery-1.9.1.js'></script>
+        <script src='/js/bootstrap.js'></script>
     </body>
 </html>
